<?xml version="1.0"?>
<package format="2">
  <name>ihmc_msg_interface</name>
  <version>0.0.0</version>
  <description>Package for making and sending IHMC controller_msgs to NASA's Valkyrie Robot.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>controller_msgs</depend>
  <depend>val_dynacore_utils</depend>
</package>
